; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_type_tuple.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_type_tuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@token = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@TOKEN_RBRACE = common dso_local global i32 0, align 4
@TOKEN_COMMA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @parse_type_tuple() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32**, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 0), align 4
  store i32 %4, i32* %1, align 4
  store i32** null, i32*** %2, align 8
  br label %5

5:                                                ; preds = %19, %0
  %6 = load i32, i32* @TOKEN_RBRACE, align 4
  %7 = call i32 @is_token(i32 %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br i1 %9, label %10, label %20

10:                                               ; preds = %5
  %11 = call i32* (...) @parse_type()
  store i32* %11, i32** %3, align 8
  %12 = load i32**, i32*** %2, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @buf_push(i32** %12, i32* %13)
  %15 = load i32, i32* @TOKEN_COMMA, align 4
  %16 = call i32 @match_token(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %10
  br label %20

19:                                               ; preds = %10
  br label %5

20:                                               ; preds = %18, %5
  %21 = load i32, i32* @TOKEN_RBRACE, align 4
  %22 = call i32 @expect_token(i32 %21)
  %23 = load i32, i32* %1, align 4
  %24 = load i32**, i32*** %2, align 8
  %25 = load i32**, i32*** %2, align 8
  %26 = call i32 @buf_len(i32** %25)
  %27 = call i32* @new_typespec_tuple(i32 %23, i32** %24, i32 %26)
  ret i32* %27
}

declare dso_local i32 @is_token(i32) #1

declare dso_local i32* @parse_type(...) #1

declare dso_local i32 @buf_push(i32**, i32*) #1

declare dso_local i32 @match_token(i32) #1

declare dso_local i32 @expect_token(i32) #1

declare dso_local i32* @new_typespec_tuple(i32, i32**, i32) #1

declare dso_local i32 @buf_len(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
